--- a/roles/geerlingguy.elasticsearch/templates/elasticsearch.yml.j2
+++ b/roles/geerlingguy.elasticsearch/templates/elasticsearch.yml.j2
@@ -31,11 +31,11 @@
 #
 # Path to directory where to store the data (separate multiple locations by comma):
 #
-# path.data: /path/to/data
+path.data: "{{ elasticsearch_path_data }}"
 #
 # Path to log files:
 #
-# path.logs: /path/to/logs
+path.logs: "{{ elasticsearch_path_logs }}"
 #
 # ----------------------------------- Memory -----------------------------------
 #
@@ -93,5 +93,5 @@ http.port: {{ elasticsearch_http_port }}
 # Require explicit names when deleting indices:
 #
 # action.destructive_requires_name: true
-script.inline: {{ elasticsearch_script_inline }}
-script.indexed: {{ elasticsearch_script_indexed }}
+# script.inline: {{ elasticsearch_script_inline }}
+# script.indexed: {{ elasticsearch_script_indexed }}
